# libcpr

./: .gitignore  .woodpecker.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FEATURES.md  README.md  TODO.md  libcpr.pc.in
cmake/: features.cmake  project.cmake
src/: address.c  address.h  bitset.c  bitset.h  bufio.c  bufio.h  clock.c  clock.h  endian.h  events.c  events.h  keyfile.c  keyfile.h  memio.c  memio.h  memory.c  memory.h  mempager.c  mempager.h  multicast.c  multicast.h  openssl.h  pipeline.c  pipeline.h  service.c  service.h  socket.c  socket.h  strchar.c  strchar.h  string.c  string.h  strtype.c  strtype.h  sync.c  sync.h  system.c  system.h  thread.c  thread.h  (+6 more)
test/: address.c  bitset.c  clock.c  endian.c  keyfile.c  memio.c  memory.c  mempager.c  openssl.c  socket.c  string.c  strtype.c  sync.c  system.c  test.conf  thread.c  tty.c  wolfssl.c
